- updated bootstrap - interface fix

--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -14,20 +14,20 @@ footer(role='contentinfo')
                 .col-md-4.block-footer
                     ul.menu-soc
                         li
-                            a(href='http://vk.com/vsevi', title='')
-                                img(src=img_url + 'i-vk.png', alt='')
+                            a(href='http://vk.com/vsevi', title='Страница ВсеВидео в Вконтакте', rel="nofollow", target="_new")
+                                img(src=img_url + 'i-vk.png', alt='Страница ВсеВидео в Вконтакте')
                         li
-                            a(href='http://www.odnoklassniki.ru/group/53196730400877', title='')
-                                img(src=img_url + 'i-ok.png', alt='')
+                            a(href='http://www.odnoklassniki.ru/group/53196730400877', rel="nofollow", target="_new", title="Страница ВсеВидео в Одноклассниках")
+                                img(src=img_url + 'i-ok.png', alt='Страница ВсеВидео в Одноклассниках')
                         li
-                            a(href='https://twitter.com/vseviru', title='')
-                                img(src=img_url + 'i-tw.png', alt='')
+                            a(href='https://twitter.com/vseviru',  rel="nofollow", target="_new", title='Страница ВсеВидео в Твиттере')
+                                img(src=img_url + 'i-tw.png', alt='Страница ВсеВидео в Твиттере')
                         li
-                            a(href='https://www.facebook.com/vseviru', title='')
-                                img(src=img_url + 'i-fb.png', alt='')
+                            a(href='https://www.facebook.com/vseviru',title='Страница ВсеВидео на Фейсбуке', rel="nofollow", target="_new")
+                                img(src=img_url + 'i-fb.png', alt='Страница ВсеВидео в Фейсбуке')
                         li
-                            a(href='http://vsevi.ru/rss/feed', title='')
-                                img(src=img_url + 'i-rss.png', alt='')
+                            a(href='http://vsevi.ru/rss/feed', title='RSS новинок на ВсеВидео', rel="nofollow", target="_new")
+                                img(src=img_url + 'i-rss.png', alt='RSS новинок на ВсеВидео')
 
         //-
            .top-footer
