--- a/interface/jade/page_index.jade
+++ b/interface/jade/page_index.jade
@@ -2,7 +2,7 @@ doctype html
 html
     - is_main = true
     - filter_year_old = {0: "все фильмы", 1: "этого года", 3: "самые свежие", 8: "свежие", 15: "новые", 20: "не старые"}
-    - filter_price = [["|", "любой стоимости"], ["|1", "в наличии"], ["0|1", "бесплатно"], ["50|1", "до 50 рублей"], ["100|1", "до 100 рублей"], ["200|1", "до 200 рублей"]]
+    - filter_price = [["|", "в наличии и нет"], ["|1", "в наличии"], ["0|1", "бесплатно"], ["50|1", "до 50 рублей"], ["100|1", "до 100 рублей"], ["200|1", "до 200 рублей"]]
     - filter_rating = [[0, "любой рейтинг"], [5, "включая плохие"], [6, "неплохие"], [6.5, "хорошие"], [7, "отличные"], [8, "самые лучшие"]]
     - filter_sort = {"rating": "по рейтингу", "subscribes": "по подписчикам", "popular": "по популярности"}
     include config
@@ -90,7 +90,8 @@ html
                            .list-film
                         .add-filter#films_more
                             .add-content.style-panel-action.rel.zmin
-                                a(href='#') мало, хочу еще фильмов
+                                - href = "/?page=" + (page?(page + 1):2)
+                                a(href=href) мало, хочу еще фильмов
                             //-
                                .filter-content
                             img.img-responsive(src=img_url + 'shd-big.png', alt='')
