--- a/interface/jade/page_film.jade
+++ b/interface/jade/page_film.jade
@@ -101,7 +101,7 @@ html
                             ul.person-data-playlist
                                 if film.countries
                                     li
-                                        span Страна
+                                        span.th Страна
                                         - delim = false
                                         div
                                             each c in film.countries
@@ -109,7 +109,7 @@ html
                                                 - delim = true
                                 if film.directors && film.directors.length
                                     li
-                                        span Режиссер
+                                        span.th Режиссер
                                         - delim = false
                                         div
                                             each c in film.directors
@@ -117,7 +117,7 @@ html
                                                 - delim = true
                                 if film.scriptwriters && film.scriptwriters.length
                                     li
-                                        span Сценарист
+                                        span.th Сценарист
                                         - delim = false
                                         div
                                             each c in film.scriptwriters
@@ -125,24 +125,25 @@ html
                                                 - delim = true
                                 if film.genres && film.genres.length
                                     li
-                                        span Жанр
+                                        span.th Жанр
                                         div
                                             - delim = false
                                             each c in film.genres
                                                 !=(delim?", ":"") + '<a href="/?genre=' + c.id + '">' + c.name + "</a>"
                                                 - delim = true
                                 li
-                                    span Дата выхода
+                                    span.th Дата выхода
                                     div
                                         |#{date_text_str(film.releasedate)}
                                 if film.duration
                                     li
-                                        span Время
+                                        span.th Время
                                         div
                                             |#{duration_text(film.duration)}
-                            //-
-                                .share-block
-                                img(src='images/content/img42.png', alt='')
+
+                            .share-block
+                                script(src="http://yandex.st/share/share.js", charset="utf-8")
+                                .yashare-auto-init(data-yasharetype="big", data-yashareL10n="ru", data-yashareQuickServices="vkontakte,odnoklassniki,moimir,facebook,twitter,gplus", data-yashareTheme="counter")
                             //-
                                .share-block
                         .col-md-3.col-sm-12.col-xs-12
